Improve Preconditions checks #11290